--- a/JS-TS/js-cafe/index.html
+++ b/JS-TS/js-cafe/index.html
@@ -7,36 +7,9 @@
 		<title>Vite App</title>
 	</head>
 	<body>
-		<div id="rootA">
-			<div>
-				<div>
-					<div></div>
-					<div>
-						<div></div>
-						<div>
-							<div id="nodeA">Value of node A</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div></div>
-		</div>
-		<div id="rootB">
-			<div>
-				<div>
-					<div></div>
-					<div>
-						<div></div>
-						<div>
-							<div>Value of node B</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div></div>
-		</div>
 		<!-- <script type="module" src="/main.js"></script> -->
 		<!-- <script type="module" src="src/memoize.js"></script> -->
-		<script type="module" src="src/dom-finder.js"></script>
+		<!-- <script type="module" src="src/dom-finder.js"></script> -->
+		<script type="module" src="src/flatten-array.js"></script>
 	</body>
 </html>
