--- a/JS-TS/js-cafe/index.html
+++ b/JS-TS/js-cafe/index.html
@@ -10,6 +10,7 @@
 		<!-- <script type="module" src="/main.js"></script> -->
 		<!-- <script type="module" src="src/memoize.js"></script> -->
 		<!-- <script type="module" src="src/dom-finder.js"></script> -->
-		<script type="module" src="src/flatten-array.js"></script>
+		<!-- <script type="module" src="src/flatten-array.js"></script> -->
+		<script type="module" src="src/flatten-deeply-nested-obj.js"></script>
 	</body>
 </html>
