--- a/JS-TS/js-cafe/index.html
+++ b/JS-TS/js-cafe/index.html
@@ -12,6 +12,7 @@
 		<!-- <script type="module" src="src/dom-finder.js"></script> -->
 		<!-- <script type="module" src="src/flatten-array.js"></script> -->
 		<!-- <script type="module" src="src/flatten-deeply-nested-obj.js"></script> -->
-		<script type="module" src="src/promise-all-polyfill.js"></script>
+		<!-- <script type="module" src="src/promise-all-polyfill.js"></script> -->
+		<script type="module" src="src/arr-map-polyfill.js"></script>
 	</body>
 </html>
