--- a/JS-TS/js-cafe/index.html
+++ b/JS-TS/js-cafe/index.html
@@ -14,6 +14,7 @@
 		<!-- <script type="module" src="src/flatten-deeply-nested-obj.js"></script> -->
 		<!-- <script type="module" src="src/promise-all-polyfill.js"></script> -->
 		<!-- <script type="module" src="src/arr-map-polyfill.js"></script> -->
-		<script type="module" src="src/curry-5-args.js"></script>
+		<!-- <script type="module" src="src/curry-5-args.js"></script> -->
+		<script type="module" src="src/curry-sum-prev.js"></script>
 	</body>
 </html>
