string-split-polyfill

--- a/JS-TS/js-cafe/index.html
+++ b/JS-TS/js-cafe/index.html
@@ -16,6 +16,7 @@
 		<!-- <script type="module" src="src/arr-map-polyfill.js"></script> -->
 		<!-- <script type="module" src="src/curry-5-args.js"></script> -->
 		<!-- <script type="module" src="src/curry-sum-prev.js"></script> -->
-		<script type="module" src="src//arr-filter-polyfill.js"></script>
+		<!-- <script type="module" src="src/arr-filter-polyfill.js"></script> -->
+		<script type="module" src="src/string-split-polyfill.js"></script>
 	</body>
 </html>
