--- a/JS-TS/index.html
+++ b/JS-TS/index.html
@@ -19,6 +19,7 @@
 		<!-- <script type="module" src="src/arr-filter-polyfill.js"></script> -->
 		<!-- <script type="module" src="src/string-split-polyfill.js"></script> -->
 		<!-- <script type="module" src="src/subarray-sum.js"></script> -->
-		<script type="module" src="src/longest-consecutive-sequence.js"></script>
+		<!-- <script type="module" src="src/longest-consecutive-sequence.js"></script> -->
+		<script type="module" src="src/max-subarray-sum.js"></script>
 	</body>
 </html>
