--- a/JS-TS/index.html
+++ b/JS-TS/index.html
@@ -22,6 +22,7 @@
 		<!-- <script type="module" src="src/longest-consecutive-sequence.js"></script> -->
 		<!-- <script type="module" src="src/max-subarray-sum.js"></script> -->
 		<!-- <script type="module" src="src/task-scheduling.js"></script> -->
-		<script type="module" src="src/arr-reduce-polyfill.js"></script>
+		<!-- <script type="module" src="src/arr-reduce-polyfill.js"></script> -->
+		<script type="module" src="src/settimeout-polyfill.js"></script>
 	</body>
 </html>
