--- a/JS-TS/index.html
+++ b/JS-TS/index.html
@@ -24,6 +24,7 @@
 		<!-- <script type="module" src="src/task-scheduling.js"></script> -->
 		<!-- <script type="module" src="src/arr-reduce-polyfill.js"></script> -->
 		<!-- <script type="module" src="src/settimeout-polyfill.js"></script> -->
-		<script type="module" src="src/setinterval-polyfill.js"></script>
+		<!-- <script type="module" src="src/setinterval-polyfill.js"></script> -->
+		<script type="module" src="src/contains-duplicate.js"></script>
 	</body>
 </html>
