--- a/JS-TS/index.html
+++ b/JS-TS/index.html
@@ -7,24 +7,6 @@
 		<title>Vite App</title>
 	</head>
 	<body>
-		<!-- <script type="module" src="/main.js"></script> -->
-		<!-- <script type="module" src="src/memoize.js"></script> -->
-		<!-- <script type="module" src="src/dom-finder.js"></script> -->
-		<!-- <script type="module" src="src/flatten-array.js"></script> -->
-		<!-- <script type="module" src="src/flatten-deeply-nested-obj.js"></script> -->
-		<!-- <script type="module" src="src/promise-all-polyfill.js"></script> -->
-		<!-- <script type="module" src="src/arr-map-polyfill.js"></script> -->
-		<!-- <script type="module" src="src/curry-5-args.js"></script> -->
-		<!-- <script type="module" src="src/curry-sum-prev.js"></script> -->
-		<!-- <script type="module" src="src/arr-filter-polyfill.js"></script> -->
-		<!-- <script type="module" src="src/string-split-polyfill.js"></script> -->
-		<!-- <script type="module" src="src/subarray-sum.js"></script> -->
-		<!-- <script type="module" src="src/longest-consecutive-sequence.js"></script> -->
-		<!-- <script type="module" src="src/max-subarray-sum.js"></script> -->
-		<!-- <script type="module" src="src/task-scheduling.js"></script> -->
-		<!-- <script type="module" src="src/arr-reduce-polyfill.js"></script> -->
-		<!-- <script type="module" src="src/settimeout-polyfill.js"></script> -->
-		<!-- <script type="module" src="src/setinterval-polyfill.js"></script> -->
-		<script type="module" src="src/contains-duplicate.js"></script>
+		<script type="module" src="src/valid-anagram.js"></script>
 	</body>
 </html>
