--- a/JS-TS/index.html
+++ b/JS-TS/index.html
@@ -7,6 +7,6 @@
 		<title>Vite App</title>
 	</head>
 	<body>
-		<script type="module" src="src/container-with-most-water.js"></script>
+		<script type="module" src="src/insert-interval.js"></script>
 	</body>
 </html>
