--- a/JS-TS/index.html
+++ b/JS-TS/index.html
@@ -7,6 +7,6 @@
 		<title>Vite App</title>
 	</head>
 	<body>
-		<script type="module" src="src/remove-duplicate-string.js"></script>
+		<script type="module" src="src/count-palindrome.js"></script>
 	</body>
 </html>
