--- a/learners-bucket/vanilla-js/index.html
+++ b/learners-bucket/vanilla-js/index.html
@@ -7,6 +7,6 @@
 	</head>
 	<body>
 		<!-- <div id="app"></div> -->
-		<script type="module" src="src/queueInJS.js"></script>
+		<script type="module" src="src/subarrayWithZeroSum.js"></script>
 	</body>
 </html>
